fix spacing issue

--- a/assets/component-want-it-shipped.css
+++ b/assets/component-want-it-shipped.css
@@ -2,7 +2,7 @@
     font-size: 14px;
     line-height: 22px;
     gap: 5px;
-    margin: -12px 0;
+    margin: -5px 0;
 }
 
 .want-it-shipped .order-by-date {
