--- a/assets/section-pdp.css
+++ b/assets/section-pdp.css
@@ -65,7 +65,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--gap);
-    margin-bottom: -10px;
+    margin-bottom: -2px;
 }
 
 @media (max-width: 900px) {
